--- a/trab1/index.html
+++ b/trab1/index.html
@@ -121,7 +121,7 @@
                 <input type="radio" id="Outro" name="Gênero" value="Outro">
                 <label for="Outro">Outro.</label><br>
                 <label for="Nascimento">Data de Nascimento:</label><br>
-                <input type="date" id="Nascimento" name="Nascimento">
+                <input type="date" id="Nascimento" name="Nascimento"><br>
                 <button type="submit">Enviar</button>
             </fieldset>
         </form>
