--- a/trab1/index.html
+++ b/trab1/index.html
@@ -122,7 +122,7 @@
                 <label for="Outro">Outro.</label><br>
                 <label for="Nascimento">Data de Nascimento:</label><br>
                 <input type="date" id="Nascimento" name="Nascimento"><br>
-                <button type="submit">Enviar</button>
+                <button type="submit">Enviar</button><br>
             </fieldset>
         </form>
 
